--- a/Exon/langs/en.yaml
+++ b/Exon/langs/en.yaml
@@ -3,7 +3,7 @@ language: "𝐄ɴɢʟɪsʜ "
 
 
 # ɴᴀᴍᴇ ᴏғ ᴘᴇᴏᴘʟᴇ(s) ᴡʜᴏ ᴡᴏʀᴋᴇᴅ ᴏɴ ᴛʜɪs ᴛʀᴀɴsʟᴀᴛɪᴏɴ
-authors: "@Abishnoi1M"
+authors: "@Yuki_hun_bhai"
 
 # ʟᴀɴɢᴜᴀɢᴇs
 curr_chat_lang: "ʜᴇʏ. ʏᴏᴜʀ ᴄᴜʀʀᴇɴᴛ ʟᴀɴɢᴜᴀɢᴇ ɪs {}, sᴇʟᴇᴄᴛ ᴛʜᴇ ᴏɴᴇ ʏᴏᴜ ᴡᴀɴᴛ ғʀᴏᴍ ᴛʜᴇ ʙᴜᴛᴛᴏɴs ʙᴇʟᴏᴡ :)"
@@ -34,7 +34,7 @@ pm_help_text: |
 add_bot: "➕ ᴀᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ᴄʜᴀᴛ"
 help_menu: "📚 ʜᴇʟᴘ"
 about: "🏡 ᴀʙᴏᴜᴛ"
-owner: "🥀 ᴅᴇᴠᴇʟᴏᴘᴇʀ"
+owner: "🗿 ᴅᴇᴠᴇʟᴏᴘᴇʀ"
 
 
 abishnoi_help: |
