--- a/Exon/langs/en.yaml
+++ b/Exon/langs/en.yaml
@@ -3,7 +3,7 @@ language: "𝐄ɴɢʟɪsʜ "
 
 
 # ɴᴀᴍᴇ ᴏғ ᴘᴇᴏᴘʟᴇ(s) ᴡʜᴏ ᴡᴏʀᴋᴇᴅ ᴏɴ ᴛʜɪs ᴛʀᴀɴsʟᴀᴛɪᴏɴ
-authors: "@Abishnoi1M"
+authors: "@Call_me_ayano"
 
 # ʟᴀɴɢᴜᴀɢᴇs
 curr_chat_lang: "ʜᴇʏ. ʏᴏᴜʀ ᴄᴜʀʀᴇɴᴛ ʟᴀɴɢᴜᴀɢᴇ ɪs {}, sᴇʟᴇᴄᴛ ᴛʜᴇ ᴏɴᴇ ʏᴏᴜ ᴡᴀɴᴛ ғʀᴏᴍ ᴛʜᴇ ʙᴜᴛᴛᴏɴs ʙᴇʟᴏᴡ :)"
@@ -13,11 +13,10 @@ set_chat_lang: "ɢʀᴇᴀᴛ, {} ɪᴛ ɪs ( ғʀᴏᴍ ɴᴏᴡ ᴏɴ!"
 
 pm_start_text: |
    ʜɪ {},
-   {} ɪs ᴛʜᴇ *ᴍᴏsᴛ ᴄᴏᴍᴘʟᴇᴛᴇ* ʙᴏᴛ ᴛᴏ ʜᴇʟᴘ
-   ʏᴏᴜ ᴍᴀɴᴀɢᴇ ʏᴏᴜʀ *ɢʀᴏᴜᴘs* ᴇᴀsɪʟʏ ᴀɴᴅ *sᴀғᴇʟʏ*.
-      ➣ *ᴜᴘᴛɪᴍᴇ :* {} 
-      ➣  *ᴜsᴇʀs :* 0{}
-      ➢  *ᴄʜᴀᴛs :* 0{}
+   {} ᴏɴᴇ ᴏꜰ ᴛʜᴇ ʟᴇɢᴇɴᴅᴀʀʏ ꜱᴀɴɪɴ ᴏꜰ ᴛʜᴇ
+      ʟᴇᴀꜰ 🍃, ᴡʜɪᴄʜ ᴄᴀɴ ʜᴇʟᴘ ʏᴏᴜ ᴛᴏ
+      ᴍᴀɴᴀɢᴇ ᴀɴᴅ ꜱᴇᴄᴜʀᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ
+      ᴡɪᴛʜ ᴀʟʟ ᴏꜰ ᴍʏ ᴄʜᴀᴋʀᴀꜱ •  
   
   
 grp_start_text: "ʜɪ, ɪ'ᴍ ᴀʟɪᴠᴇ ʙᴀʙʏ."
