--- a/Exon/langs/en.yaml
+++ b/Exon/langs/en.yaml
@@ -13,10 +13,9 @@ set_chat_lang: "ɢʀᴇᴀᴛ, {} ɪᴛ ɪs ( ғʀᴏᴍ ɴᴏᴡ ᴏɴ!"
 
 pm_start_text: |
    ʜɪ {},
-   {} ᴏɴᴇ ᴏꜰ ᴛʜᴇ ʟᴇɢᴇɴᴅᴀʀʏ ꜱᴀɴɪɴ ᴏꜰ ᴛʜᴇ
-      ʟᴇᴀꜰ 🍃, ᴡʜɪᴄʜ ᴄᴀɴ ʜᴇʟᴘ ʏᴏᴜ ᴛᴏ
-      ᴍᴀɴᴀɢᴇ ᴀɴᴅ ꜱᴇᴄᴜʀᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ
-      ᴡɪᴛʜ ᴀʟʟ ᴏꜰ ᴍʏ ᴄʜᴀᴋʀᴀꜱ •  
+   {} ᴏɴᴇ ᴏꜰ ᴛʜᴇ ʟᴇɢᴇɴᴅᴀʀʏ ꜱᴀɴɪɴ ᴏꜰ ᴛʜᴇ ʟᴇᴀꜰ 🍃
+      ᴡʜɪᴄʜ ᴄᴀɴ ʜᴇʟᴘ ʏᴏᴜ ᴛᴏʜ ᴍᴀɴᴀɢᴇ
+      ᴀɴᴅ ꜱᴇᴄᴜʀᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴡɪᴛʜ ᴀʟʟ ᴏꜰ ᴍʏ ᴄʜᴀᴋʀᴀꜱ •
   
   
 grp_start_text: "ʜɪ, ɪ'ᴍ ᴀʟɪᴠᴇ ʙᴀʙʏ."
