--- a/Exon/langs/en.yaml
+++ b/Exon/langs/en.yaml
@@ -13,11 +13,11 @@ set_chat_lang: "ɢʀᴇᴀᴛ, {} ɪᴛ ɪs ( ғʀᴏᴍ ɴᴏᴡ ᴏɴ!"
 
 pm_start_text: |
    ʜɪ {},
-   {} ɪs ᴛʜᴇ *ᴍᴏsᴛ ᴄᴏᴍᴘʟᴇᴛᴇ* ʙᴏᴛ ᴛᴏ ʜᴇʟᴘ
-   ʏᴏᴜ ᴍᴀɴᴀɢᴇ ʏᴏᴜʀ *ɢʀᴏᴜᴘs* ᴇᴀsɪʟʏ ᴀɴᴅ *sᴀғᴇʟʏ*.
-      ➣ *ᴜᴘᴛɪᴍᴇ :* {} 
-      ➣  *ᴜsᴇʀs :* 0{}
-      ➢  *ᴄʜᴀᴛs :* 0{}
+   𝑺𝒂𝒍𝒖𝒕𝒂𝒕𝒊𝒐𝒏𝒔! 𝑰'𝒎 𝑴𝒂𝒌𝒊 𝒁𝒆𝒏𝒊𝒏, 𝒂 𝒕𝒆𝒏𝒂𝒄𝒊𝒐𝒖𝒔 𝒔𝒐𝒓𝒄𝒆𝒓𝒆𝒓 
+   𝒇𝒖𝒆𝒍𝒆𝒅 𝒃𝒚 𝒂 𝒓𝒆𝒍𝒆𝒏𝒕𝒍𝒆𝒔𝒔 𝒑𝒖𝒓𝒔𝒖𝒊𝒕 𝒐𝒇 𝒆𝒙𝒄𝒆𝒍𝒍𝒆𝒏𝒄𝒆. 
+   𝑴𝒚 𝒆𝒙𝒑𝒆𝒓𝒕𝒊𝒔𝒆 𝒍𝒊𝒆𝒔 𝒊𝒏 𝒄𝒐𝒎𝒃𝒂𝒕𝒊𝒏𝒈 𝒄𝒖𝒓𝒔𝒆𝒔 𝒂𝒏𝒅 𝒎𝒂𝒊𝒏𝒕𝒂𝒊𝒏𝒊𝒏𝒈 
+   𝒉𝒂𝒓𝒎𝒐𝒏𝒚 𝒊𝒏 𝒕𝒉𝒆 𝒎𝒚𝒔𝒕𝒊𝒄𝒂𝒍 𝒓𝒆𝒂𝒍𝒎. 𝑺𝒐 𝒊𝒇 𝒚𝒐𝒖 𝒘𝒂𝒏𝒏𝒂 
+   𝒑𝒓𝒐𝒕𝒆𝒄𝒕 𝒚𝒐𝒖𝒓 𝒈𝒓𝒐𝒖𝒑 𝒇𝒓𝒐𝒎 𝒘𝒓𝒆𝒕𝒄𝒉𝒆𝒅 𝒄𝒖𝒓𝒔𝒆𝒔, 𝑫𝒐𝒏'𝒕 𝒉𝒆𝒔𝒊𝒕𝒂𝒕𝒆 𝒕𝒐 𝒂𝒅𝒅 𝒎𝒆.✨
   
   
 grp_start_text: "ʜɪ, ɪ'ᴍ ᴀʟɪᴠᴇ ʙᴀʙʏ."
